# ai-engine

./: .gitignore  README.md  env_example  epa_api_catalog.json  hs_site_mapping.py  main.py  pyproject.toml  requirements.txt  test_improvements.py  test_requirements_analysis.py
app/models/: __init__.py  requirement_models.py
app/routers/: chat_router.py  hs_tariff_router.py  keyword_extraction_router.py  precedents_router.py  product_registration_router.py  product_router.py  requirements_router.py  tax_router.py  verification_router.py
app/schemas/: common.py  (+1 more)
chatbot-api/: main.py
hs_code_analysis/: __init__.py  env.example  hs_code_analyzer.py  main.py  test_hs_code_api.py
hs_graph_service/: config.py  llm_service.py  main.py  models.py  vector_service.py  workflow.py
hs_graph_service_jh_v1/: llm_service.py  main.py  test_hs_code_api.py  workflow.py
hs_graph_service_jh_v2/: MIGRATED.md  config.py  llm_service.py  main.py  models.py  vector_service.py  workflow.py
precedents-analysis/: .gitignore  MIGRATED.md  README.md  ai_analyzer.py  cbp_scraper.py  faiss_precedents_db.py  main.py  requirements.txt  start.sh  test_api.py  vector_precedents_search.py
scripts/: __init__.py  debug_test.py  show_endpoints.py  test_api_only.py  test_endpoints_catalog.py  test_env.py  test_faiss_dual.py  test_requirements_workflow.py  test_smart_scraping.py  test_smart_search.py  test_tavily_only.py
tax_via_hs/: index_builder.py  query_service.py
workflows/: nodes.py  product_registration_workflow.py  requirements_workflow.py  tools.py  unified_workflow.py  workflow.py
(+44 files in other folders)
